--- a/WebContent/media/css/style.css
+++ b/WebContent/media/css/style.css
@@ -7,7 +7,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-	background: transparentu
+	background: transparent;
 }
 
 article,aside,command,details,summary,figure,figcaption,footer,header,hgroup,mark,meter,nav,progress,ruby,rt,rp,section,time,wbr
