--- a/WebContent/media/css/style.css
+++ b/WebContent/media/css/style.css
@@ -139,7 +139,7 @@ body>header>div nav#menu ul li {
 body>header>div nav#menu ul li>a {
 	display: block;
 	float: left;
-	font-weight:bold;
+	font-weight: bold;
 	padding: 8px 0 0;
 	height: 27px;
 	font-family: Helvetica, "Segoe UI", Tahoma, sans-serif;
@@ -172,13 +172,6 @@ body>header>div nav#menu ul li>a:hover span {
 	border-bottom-color: rgba(50, 50, 50, 0.9) !important
 }
 
-body>header>div nav#lang {
-	position: absolute;
-	top: 40px;
-	right: 0;
-	height: 20px
-}
-
 body>header>div nav#lang2 {
 	position: absolute;
 	top: 40px;
@@ -186,6 +179,10 @@ body>header>div nav#lang2 {
 	height: 20px
 }
 
+  body > header > div > nav#lang2 ul li:first-child {
+    background: none;
+  }
+  
 body>header>div nav#lang2 ul li {
 	height: 24px;
 	padding: 5px 5px 5px 5px;
@@ -199,7 +196,7 @@ body>header>div nav#lang2 ul li>a {
 	height: 22px;
 	font-size: medium;
 	font-family: Helvetica, "Segoe UI", Tahoma, sans-serif;
-	font-weight:bold;
+	font-weight: bold;
 	color: rgba(50, 50, 50, 0.9);
 	text-decoration: none;
 	text-shadow: -1px 0 rgba(200, 200, 200, 0.5), 0 1px
@@ -207,11 +204,7 @@ body>header>div nav#lang2 ul li>a {
 		rgba(200, 200, 200, 0.5);
 	text-decoration: none;
 }
-
-body>header>div nav#lang2 ul li:first-child {
-	background: 0
-}
-
+ 
 body>header>div nav#lang2 ul li>a span {
 	width: auto;
 	height: 20px;
@@ -227,45 +220,6 @@ body>header>div nav#lang2 ul li>a span {
 body>header>div nav#lang2 ul li>a:hover span {
 	border-bottom-color: rgba(50, 50, 50, 0.9) !important
 }
-
-body>header>div nav#lang ul li {
-	height: 20px;
-	padding: 0 2px 0 3px;
-	display: block;
-	float: left;
-	background: url(../img/language_divider.png) no-repeat 0 2px
-}
-
-body>header>div nav#lang ul li:first-child {
-	background: 0
-}
-
-body>header>div nav#lang ul li>a {
-	display: block;
-	float: left;
-	padding: 2px 4px 0;
-	height: 18px;
-	background-repeat: no-repeat;
-	background-image: url(../img/language.png);
-	-webkit-background-size: 20px 74px;
-	-moz-background-size: 20px 74px;
-	background-size: 20px 74px
-}
-
-body>header>div nav#lang ul li>a span {
-	display: block;
-	width: auto;
-	height: 16px;
-	margin: 0 1px;
-	border-bottom: 2px solid transparent;
-	text-indent: -9999px;
-	overflow: hidden;
-	-webkit-transition: border-bottom-color .3s linear;
-	-moz-transition: border-bottom-color .3s linear;
-	transition: border-bottom-color .3s linear
-}
-
- 
 
 body>header>em.backimage {
 	position: absolute;
@@ -327,33 +281,6 @@ body#pageContatti>header>em.backimage {
 body#pageGallery>header>em.backimage {
 	background-image: url(../img/photos/headers/header_esterno.jpg)
 }
-
-body>header>div nav#lang ul li.it a {
-	width: 15px;
-	background-position: 4px 4px
-}
-
-body>header>div nav#lang ul li.en a {
-	width: 19px;
-	background-position: 4px -12px
-}
-
-body>header>div nav#lang ul li.de a {
-	width: 19px;
-	background-position: 4px -28px
-}
-
-body>header>div nav#lang ul li.fr a {
-	width: 18px;
-	background-position: 4px -50px
-}
-
-body>header>div nav#lang ul li.es a {
-	width: 18px;
-	background-position: 4px -70px
-}
-
- 
 
 body.it>header>div nav#lang2 ul li.it2 a span,body.en>header>div nav#lang2 ul li.en2 a span,body.de>header>div nav#lang2 ul li.de2 a span,body.fr>header>div nav#lang2 ul li.fr2 a span,body.es>header>div nav#lang2 ul li.es2 a span
 	{
@@ -916,7 +843,6 @@ body#pagePrezzi article>section table tbody th {
 	text-align: right;
 	vertical-align: bottom;
 	background: #fafafa;
- 
 	background-repeat: no-repeat
 }
 
@@ -935,12 +861,11 @@ body#pagePrezzi article>section table tbody th strong {
 body#pagePrezzi article>section table tbody tr#room1 th {
 	background-image: url(../img/photos/camera_1.jpg);
 	background-position: center;
-	
 }
 
 body#pagePrezzi article>section table tbody tr#room2 th {
-	background-image:  url(../img/photos/camera_2.jpg);
-		background-position: center;
+	background-image: url(../img/photos/camera_2.jpg);
+	background-position: center;
 }
 
 body#pagePrezzi article>section table tbody tr#room3 th {
@@ -1062,20 +987,21 @@ body#pageContatti article>section #gwrap+a {
 	color: #999
 }
 
-body#pageGallery article > section > figure {
-  padding: 0px 5px;
+body#pageGallery article>section>figure {
+	padding: 0px 5px;
 }
-body#pageGallery article > section > figure > img {
-  position: relative;
-  width: 100%;
-  height: auto;
-  margin: 10px 0px;
-  padding: 5px;
-  display: block;
-  background: url(../img/grid.gif) repeat 50% 50%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+
+body#pageGallery article>section>figure>img {
+	position: relative;
+	width: 100%;
+	height: auto;
+	margin: 10px 0px;
+	padding: 5px;
+	display: block;
+	background: url(../img/grid.gif) repeat 50% 50%;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 @media only screen and (max-width:1023px) {
@@ -1091,13 +1017,13 @@ body#pageGallery article > section > figure > img {
 	body>header>div nav#menu {
 		right: 32px
 	}
-	body>header>div nav#lang {
+	body>header>div nav#lang2 {
 		right: 30px
 	}
 	body>footer>div p.contact {
 		left: 30px
 	}
-	body>footer>div p.socials,body>footer>div p.credits {
+	body>footer>div p.socials {
 		right: 30px
 	}
 }
@@ -1125,13 +1051,33 @@ body#pageGallery article > section > figure > img {
 		background-size: 290px 65px
 	}
 
-	/*language menu bianco nella home su mobile perchè sfondo è nero*/
+	/*language menu bianco nella home e prezzi su mobile perchè sfondo è nero -- begin*/
 	body#pageHomepage>header>div nav#lang2 ul li>a {
 		color: rgba(250, 250, 250, 0.9);
-	}			body.it>header>div nav#lang2 ul li.it2 a span,body.en>header>div nav#lang2 ul li.en2 a span,body.de>header>div nav#lang2 ul li.de2 a span,body.fr>header>div nav#lang2 ul li.fr2 a span,body.es>header>div nav#lang2 ul li.es2 a span
+	}
+	body.it#pageHomepage>header>div nav#lang2 ul li.it2 a span,
+	body.en#pageHomepage>header>div nav#lang2 ul li.en2 a span,
+	body.de#pageHomepage>header>div nav#lang2 ul li.de2 a span,
+	body.fr#pageHomepage>header>div nav#lang2 ul li.fr2 a span,
+	body.es#pageHomepage>header>div nav#lang2 ul li.es2 a span
 	{
 		border-bottom-color: rgba(250, 250, 250, 0.9);
 	}
+	body#pagePrezzi>header>div nav#lang2 ul li>a {
+		color: rgba(250, 250, 250, 0.9);
+	}
+	body.it#pagePrezzi>header>div nav#lang2 ul li.it2 a span,
+	body.en#pagePrezzi>header>div nav#lang2 ul li.en2 a span,
+	body.de#pagePrezzi>header>div nav#lang2 ul li.de2 a span,
+	body.fr#pagePrezzi>header>div nav#lang2 ul li.fr2 a span,
+	body.es#pagePrezzi>header>div nav#lang2 ul li.es2 a span
+	{
+		border-bottom-color: rgba(250, 250, 250, 0.9);
+	}
+	/*language menu bianco nella home e prezzi su mobile perchè sfondo è nero -- ends*/
+	
+	
+
 	body#pageHomepage>header>div>a {
 		background-image: url(../img/modified/luna4_white.png);
 	}
@@ -1161,10 +1107,10 @@ body#pageGallery article > section > figure > img {
 		display: inline-block;
 		position: relative;
 		vertical-align: middle;
-	font-family: Helvetica, "Segoe UI", Tahoma, sans-serif;
-				font-weight:bold;
-	font-size:larger;
-	text-decoration: none;
+		font-family: Helvetica, "Segoe UI", Tahoma, sans-serif;
+		font-weight: bold;
+		font-size: larger;
+		text-decoration: none;
 		top: 10px;
 		right: 10px;
 		color: white;
@@ -1602,9 +1548,9 @@ body#pageGallery article > section > figure > img {
 	}
 	body#pageHomepage {
 		background-image: url(../img/photos/homepage/iphone4_portrait.jpg);
-		-webkit-background-size:  100% 100%;;
-		-moz-background-size:  100% 100%;;
-		background-size:  100% 100%;
+		-webkit-background-size: 100% 100%;;
+		-moz-background-size: 100% 100%;;
+		background-size: 100% 100%;
 	}
 	body#pageHomepage>article>aside>div p#txt1 {
 		top: 280px;
@@ -1637,9 +1583,9 @@ body#pageGallery article > section > figure > img {
 	}
 	body#pageHomepage {
 		background-image: url(../img/photos/homepage/iphone4_landscape.jpg);
--webkit-background-size:  100% 100%;;
-		-moz-background-size:  100% 100%;;
-		background-size:  100% 100%;
+		-webkit-background-size: 100% 100%;;
+		-moz-background-size: 100% 100%;;
+		background-size: 100% 100%;
 	}
 	body#pageHomepage>header>div {
 		padding-top: 80px
@@ -1701,7 +1647,7 @@ body#pageGallery article > section > figure > img {
 	body>header>div nav#menu {
 		right: 32px
 	}
-	body>header>div nav#lang {
+	body>header>div nav#lang2 {
 		right: 30px
 	}
 	body>footer>div p.contact {
@@ -1716,48 +1662,15 @@ body#pageGallery article > section > figure > img {
 	body#pageHomepage>header>div nav#menu {
 		right: 62px
 	}
-	body#pageHomepage>header>div nav#lang {
+	body#pageHomepage>header>div nav#lang2 {
 		right: 60px
 	}
-	body#pageHomepage>header>div>nav#lang {
+	body#pageHomepage>header>div>nav#lang2 {
 		height: 22px
 	}
-	body#pageHomepage>header>div>nav#lang ul li {
+	body#pageHomepage>header>div>nav#lang2 ul li {
 		height: 22px;
 		background-image: url(../img/language_divider_big.png)
-	}
-	body#pageHomepage>header>div>nav#lang ul li:first-child {
-		background: 0
-	}
-	body#pageHomepage>header>div>nav#lang ul li>a {
-		height: 20px;
-		background-image: url(../img/language_big.png);
-		-webkit-background-size: 24px 106px;
-		-moz-background-size: 24px 106px;
-		background-size: 24px 106px
-	}
-	body#pageHomepage>header>div>nav#lang ul li>a span {
-		height: 18px
-	}
-	body#pageHomepage>header>div>nav#lang ul li.it a {
-		width: 17px;
-		background-position: 4px 2px
-	}
-	body#pageHomepage>header>div>nav#lang ul li.en a {
-		width: 24px;
-		background-position: 4px -28px
-	}
-	body#pageHomepage>header>div>nav#lang ul li.de a {
-		width: 22px;
-		background-position: 4px -58px
-	}
-	body#pageHomepage>header>div>nav#lang ul li.fr a {
-		width: 21px;
-		background-position: 4px -88px
-	}
-	body#pageHomepage>header>div>nav#lang ul li.es a {
-		width: 21px;
-		background-position: 4px -118px
 	}
 	body#pageCamere article>section aside>ul li {
 		margin-left: 15px
@@ -1784,9 +1697,6 @@ body#pageGallery article > section > figure > img {
 	}
 	body>header>div nav#menu {
 		right: 27px
-	}
-	body>header>div nav#lang {
-		right: 25px
 	}
 	body>article>section h1 {
 		font-size: 30px
@@ -1896,120 +1806,88 @@ body#pageGallery article > section > figure > img {
 @media screen and (device-aspect-ratio: 40/71) and
 	(orientation:portrait) {
 	body#pageHomepage {
-		background: url(../img/photos/homepage/iphone5_portrait.jpg) no-repeat 50% 50%;
-			background-attachment: fixed;
--webkit-background-size:  100% 100%;;
-		-moz-background-size:  100% 100%;;
-		background-size:  100% 100%;
+		background: url(../img/photos/homepage/iphone5_portrait.jpg) no-repeat
+			50% 50%;
+		background-attachment: fixed;
+		-webkit-background-size: 100% 100%;;
+		-moz-background-size: 100% 100%;;
+		background-size: 100% 100%;
 	}
 	body#pageHomepage>header>div nav#lang2 ul li>a {
 		color: rgba(250, 250, 250, 0.9);
-	}
-			body.it>header>div nav#lang2 ul li.it2 a span,body.en>header>div nav#lang2 ul li.en2 a span,body.de>header>div nav#lang2 ul li.de2 a span,body.fr>header>div nav#lang2 ul li.fr2 a span,body.es>header>div nav#lang2 ul li.es2 a span
-	{
-		border-bottom-color: rgba(250, 250, 250, 0.9);
 	}
 }
 /*iphone5 landscape */
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 568px) 
-and (orientation:landscape) {
+@media only screen and (min-device-width : 320px) and (max-device-width
+	: 568px) and (orientation:landscape) {
 	body#pageHomepage {
-		background: url(../img/photos/homepage/iphone5_landscape.jpg) no-repeat 50% 50%;
--webkit-background-size:  100% 100%;
-		-moz-background-size:  100% 100%;;
-		background-size:  100% 100%;
+		background: url(../img/photos/homepage/iphone5_landscape.jpg) no-repeat
+			50% 50%;
+		-webkit-background-size: 100% 100%;
+		-moz-background-size: 100% 100%;;
+		background-size: 100% 100%;
 	}
 	body#pageHomepage>header>div nav#lang2 ul li>a {
 		color: rgba(250, 250, 250, 0.9);
-	}
-			body.it>header>div nav#lang2 ul li.it2 a span,body.en>header>div nav#lang2 ul li.en2 a span,body.de>header>div nav#lang2 ul li.de2 a span,body.fr>header>div nav#lang2 ul li.fr2 a span,body.es>header>div nav#lang2 ul li.es2 a span
-	{
-		border-bottom-color: rgba(250, 250, 250, 0.9);
 	}
 }
 
 /*iphone6 portrait */
-@media only screen 
-and (min-device-width : 375px) 
-and (max-device-width : 667px) 
-and (orientation:portrait) {
+@media only screen and (min-device-width : 375px) and (max-device-width
+	: 667px) and (orientation:portrait) {
 	body#pageHomepage {
-		background: url(../img/photos/homepage/iphone6_portrait.jpg) no-repeat 50% 50%;
--webkit-background-size:  100% 100%;;
-		-moz-background-size:  100% 100%;;
-		background-size:  100% 100%;
+		background: url(../img/photos/homepage/iphone6_portrait.jpg) no-repeat
+			50% 50%;
+		-webkit-background-size: 100% 100%;;
+		-moz-background-size: 100% 100%;;
+		background-size: 100% 100%;
 	}
 	body#pageHomepage>header>div nav#lang2 ul li>a {
 		color: rgba(250, 250, 250, 0.9);
 	}
-			body.it>header>div nav#lang2 ul li.it2 a span,body.en>header>div nav#lang2 ul li.en2 a span,body.de>header>div nav#lang2 ul li.de2 a span,body.fr>header>div nav#lang2 ul li.fr2 a span,body.es>header>div nav#lang2 ul li.es2 a span
-	{
-		border-bottom-color: rgba(250, 250, 250, 0.9);
-	}
 }
-
 
 /*galaxy s4 portrait */
-@media only screen 
-and (min-device-width : 360px) 
-and (max-device-width : 640px) 
-and (orientation:portrait) {
+@media only screen and (min-device-width : 360px) and (max-device-width
+	: 640px) and (orientation:portrait) {
 	body#pageHomepage {
-		background: url(../img/photos/homepage/iphone6_portrait.jpg) no-repeat 50% 50%;
--webkit-background-size:  100% 100%;;
-		-moz-background-size:  100% 100%;;
-		background-size:  100% 100%;
+		background: url(../img/photos/homepage/iphone6_portrait.jpg) no-repeat
+			50% 50%;
+		-webkit-background-size: 100% 100%;;
+		-moz-background-size: 100% 100%;;
+		background-size: 100% 100%;
 	}
 	body#pageHomepage>header>div nav#lang2 ul li>a {
 		color: rgba(250, 250, 250, 0.9);
-	}
-				body.it>header>div nav#lang2 ul li.it2 a span,body.en>header>div nav#lang2 ul li.en2 a span,body.de>header>div nav#lang2 ul li.de2 a span,body.fr>header>div nav#lang2 ul li.fr2 a span,body.es>header>div nav#lang2 ul li.es2 a span
-	{
-		border-bottom-color: rgba(250, 250, 250, 0.9);
 	}
 }
 
- 
 /*galaxy s/s2/w portrait */
-@media only screen 
-and (min-device-width : 480px) 
-and (max-device-width : 800px) 
-and (orientation : portrait) {
+@media only screen and (min-device-width : 480px) and (max-device-width
+	: 800px) and (orientation : portrait) {
 	body#pageHomepage {
-		background: url(../img/photos/homepage/iphone5_portrait.jpg) no-repeat 50% 50%;
--webkit-background-size:  100% 100%;;
-		-moz-background-size:  100% 100%;;
-		background-size:  100% 100%;
+		background: url(../img/photos/homepage/iphone5_portrait.jpg) no-repeat
+			50% 50%;
+		-webkit-background-size: 100% 100%;;
+		-moz-background-size: 100% 100%;;
+		background-size: 100% 100%;
 	}
 	body#pageHomepage>header>div nav#lang2 ul li>a {
 		color: rgba(250, 250, 250, 0.9);
 	}
-	body.it>header>div nav#lang2 ul li.it2 a span,body.en>header>div nav#lang2 ul li.en2 a span,body.de>header>div nav#lang2 ul li.de2 a span,body.fr>header>div nav#lang2 ul li.fr2 a span,body.es>header>div nav#lang2 ul li.es2 a span
-	{
-		border-bottom-color: rgba(250, 250, 250, 0.9);
-	}
-}  
+}
 
 /*iphone6 landscape */
-@media only screen 
-and (min-device-width : 375px) 
-and (max-device-width : 667px) 
-and (orientation:landscape) {
+@media only screen and (min-device-width : 375px) and (max-device-width
+	: 667px) and (orientation:landscape) {
 	body#pageHomepage {
-		background: url(../img/photos/homepage/iphone6_landscape.jpg) no-repeat 50% 50%;
--webkit-background-size:  100% 100%;;
-		-moz-background-size:  100% 100%;;
-		background-size:  100% 100%;
+		background: url(../img/photos/homepage/iphone6_landscape.jpg) no-repeat
+			50% 50%;
+		-webkit-background-size: 100% 100%;;
+		-moz-background-size: 100% 100%;;
+		background-size: 100% 100%;
 	}
 	body#pageHomepage>header>div nav#lang2 ul li>a {
 		color: rgba(250, 250, 250, 0.9);
-	}			body.it>header>div nav#lang2 ul li.it2 a span,body.en>header>div nav#lang2 ul li.en2 a span,body.de>header>div nav#lang2 ul li.de2 a span,body.fr>header>div nav#lang2 ul li.fr2 a span,body.es>header>div nav#lang2 ul li.es2 a span
-	{
-		border-bottom-color: rgba(250, 250, 250, 0.9);
 	}
 }
-
-
-
