--- a/WebContent/media/css/style.css
+++ b/WebContent/media/css/style.css
@@ -21,8 +21,14 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 ol,ul,li {
-	list-style: none
+	list-style: none;
 }
+
+
+body#pageDovesiamo ol>li  {
+	list-style: decimal;
+}
+
 
 html {
 	-webkit-text-size-adjust: 100%;
